@@ -38,6 +38,9 @@ Major changes since man-db 2.4.1:
 	o The --enable-debug option to configure has been removed. man-db's
 	  Makefiles now always calculate full dependencies for C files.
 
+	o mandb caches the contents of directories, significantly speeding
+	  up the purging of obsolete entries.
+
 man-db 2.4.1 (22 December 2002)
 ===============================
 
